feat: add api for accessing players list
