# core/api/app/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.json
-#   timestamp: 2026-05-17T18:31:14+00:00
+#   timestamp: 2026-05-19T15:56:33+00:00
 
 from __future__ import annotations
 
@@ -10,21 +10,6 @@ from typing import Annotated, Any
 from uuid import UUID
 
 from pydantic import BaseModel, Field
-
-
-class PlayerImportRequest(BaseModel):
-    name: Annotated[
-        str, Field(examples=['Мая Вишневская'], max_length=200, min_length=1)
-    ]
-    seat_number: Annotated[int | None, Field(examples=[1], ge=1)] = None
-    role_start: Annotated[
-        str, Field(examples=['Дамочка'], max_length=200, min_length=1)
-    ]
-    role_end: Annotated[str, Field(examples=['Дамочка'], max_length=200, min_length=1)]
-    alignment_end: Annotated[
-        str, Field(examples=['добро'], pattern='^(добро|зло|нейтральный)$')
-    ]
-    is_alive: Annotated[bool, Field(examples=[True])]
 
 
 class Player(BaseModel):
@@ -190,6 +175,15 @@ class RolesImportResponse(BaseModel):
     errors: list[str]
 
 
+class Player1(BaseModel):
+    id: Annotated[UUID, Field(examples=['b1c2d3e4-f5a6-7890-abcd-1234567890ef'])]
+    name: Annotated[str, Field(examples=['Alice'])]
+
+
+class PlayersResponse(BaseModel):
+    players: list[Player1]
+
+
 class RoleItem(BaseModel):
     id: Annotated[UUID, Field(examples=['a09f3ff7-0f02-485a-b0e1-87388b27face'])]
     name: Annotated[str, Field(examples=['Chambermaid'])]
@@ -222,3 +216,23 @@ class RoleTranslation(BaseModel):
 
 class ErrorResponse(BaseModel):
     detail: str | dict[str, Any]
+
+
+class PlayerImportRequest(BaseModel):
+    name: Annotated[
+        str, Field(examples=['Мая Вишневская'], max_length=200, min_length=1)
+    ]
+    seat_number: Annotated[int | None, Field(examples=[1], ge=1)] = None
+    role_start: Annotated[
+        str, Field(examples=['Дамочка'], max_length=200, min_length=1)
+    ]
+    role_end: Annotated[str, Field(examples=['Дамочка'], max_length=200, min_length=1)]
+    alignment_end: Annotated[
+        str, Field(examples=['добро'], pattern='^(добро|зло|нейтральный)$')
+    ]
+    is_alive: Annotated[bool, Field(examples=[True])]
+
+
+class PlayerItem(BaseModel):
+    id: Annotated[UUID, Field(examples=['b1c2d3e4-f5a6-7890-abcd-1234567890ef'])]
+    name: Annotated[str, Field(examples=['Alice'])]
